export class Building {
  domainId!: string;
  code!: string;
  designation!: string;
  description!: string;
  length!: number;
  width!: number;
  height!: number;
}
