export enum TaskType {
  surveillance = "Surveillance", delivery = "Delivery"
}
